# ICEBot_ROS_WS

./: .gitignore  .gitmodules  README.md  plotjugglerLayout.xml  pseudo_random_trajectory.csv
Input_Files/: ICE_rotational_Actuation.csv  ICE_rotatrion_actuation.py  Trajectory.csv  actuation-miltisine.csv  plotter.py  possible_task_targets.csv  pseudo_random_generator.py  pseudo_random_trajectory.csv  trajectory_17.csv
Output_Files/: plotter.py
Output_Files/2025-01-21_15-27-42/: FTsensor.csv  task_space.csv
Output_Files/2025-01-21_15-37-57/: FTsensor.csv  task_space.csv
Output_Files/2025-01-21_15-42-46/: FTsensor.csv  task_space.csv
Output_Files/3D ICE Catheter Data/: plotter.py
Output_Files/AcuNav ICE PRS/: task_space.csv
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Forcetorque.msg  Jointspace.msg  Taskspace.msg
src/interfaces/srv/: Startrecording.srv
src/manager/: CMakeLists.txt  package.xml
src/manager/launch/: launch.py
src/manager/lib_predictor/: CMakeLists.txt
src/manager/lib_predictor/include/: predictor.hpp  synchedVector.hpp
src/manager/lib_predictor/model/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json  states_auxiliary.pt
src/manager/lib_predictor/model_damped/: model_summary.txt  trajectory_17.csv
src/manager/lib_predictor/model_damped/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json  states_auxiliary.pt
src/manager/lib_predictor/model_old/: model_summary.txt
src/manager/lib_predictor/model_old/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json
src/manager/lib_predictor/model_old_2/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json  states_auxiliary.pt
src/manager/lib_predictor/model_old_3/: model_summary.txt
src/manager/lib_predictor/model_old_3/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json  states_auxiliary.pt
src/manager/lib_predictor/model_old_4/: trajectory_17.csv
src/manager/lib_predictor/model_old_4/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json  states_auxiliary.pt
src/manager/lib_predictor/model_underdamp/: trajectory_17.csv
src/manager/lib_predictor/model_underdamp/scripted_model/: decoder.pt  encoder.pt  inputs_auxiliary.pt  model_info.json  states_auxiliary.pt
src/manager/lib_predictor/src/: predictor.cpp
src/manager/src/: Catheter_sim_node.cpp  Koopman_model_node.cpp  manager_node.cpp  recorder_node.cpp  signal_generator.cpp
src/manager/tendon_library/: CMakeLists.txt
src/manager/tendon_library/include/: MathOperations.hpp  ODESystem.hpp  PDESystem.hpp  TendonDriven.hpp  TimeManager.hpp
src/robot/: CMakeLists.txt  README.md  package.xml
src/robot/Output_Files/Log/Robot/: 2024-12-20_20-16-23.txt  2024-12-20_20-17-08.txt  2025-01-15_11-22-50.txt  2025-01-15_12-43-11.txt  2025-01-15_13-01-40.txt  2025-01-15_13-14-12.txt  2025-01-15_13-23-59.txt  2025-01-15_13-26-46.txt  2025-01-15_13-31-16.txt  2025-01-15_13-32-30.txt  2025-01-15_13-33-54.txt  2025-01-15_13-42-37.txt  2025-01-15_13-43-18.txt  2025-01-15_13-49-31.txt  2025-01-15_13-49-39.txt  2025-01-15_13-49-47.txt  2025-01-15_13-59-19.txt  2025-01-15_17-02-14.txt  2025-01-15_18-07-50.txt  2025-01-15_18-38-43.txt  2025-01-15_18-43-44.txt  2025-01-15_18-47-11.txt  2025-01-15_18-53-44.txt  2025-01-15_18-53-51.txt  2025-01-15_18-53-55.txt  2025-01-21_14-01-32.txt  2025-01-21_14-01-52.txt  2025-01-21_14-01-57.txt  2025-01-21_14-05-12.txt  2025-01-21_14-05-16.txt  2025-01-21_14-05-20.txt  2025-01-21_14-10-54.txt  2025-01-21_14-40-40.txt  2025-01-21_14-46-53.txt  2025-01-21_14-57-07.txt  2025-01-21_14-57-14.txt  2025-01-21_14-57-18.txt  2025-01-21_15-10-28.txt  2025-01-21_15-10-33.txt  2025-01-23_16-18-33.txt  (+87 more)
src/robot/launch/: launch.py
src/robot/lib_robot/: CMakeLists.txt
src/robot/lib_robot/config/: Epos2.eds  master_cstarbot.yml  master_icebot.yml  mc5004.eds  mclm3001.eds
src/robot/lib_robot/include/: CanEssentials.hpp  CatheterRobot.hpp  CiA301node.hpp  FCnode.hpp  SharedStates.hpp
src/robot/lib_robot/src/: CanEssentials.cpp  CatheterRobot.cpp  CiA301node.cpp  FCnode.cpp
src/robot/src/: robot_node.cpp
src/visualizer/: package.xml  setup.py
src/visualizer/visualizer/: Visualizer_node.py
